1 Fork: Increase the number of bonus points for the season rewards 2 Fork: Add season reward blacklist 3 Fork: Increase Coinbase transaction maturity 4 Fix available balance calculation error 5 Fork: fix redemption transaction lock issue 6 Fix the problem that the statistics of the Last Season Reward data in the node is incorrect 7 Add Token RPC to support balance query, transfer and transfer record query of known Token 8 Add foundation rewards

--- a/Guide.html
+++ b/Guide.html
@@ -1,6 +1,12 @@
 <h1>GKC使用說明</h1>
 
 <ul>
+	<h2>v2.4.1</h2>
+	<h3>賽季獎勵黑名單</h3>
+	<p>每一個賽季有一個黑名單，在黑名單中的節點將不會分發本賽季的賽季獎勵。</p>
+	<p>使用管理員錢包執行 addblackagent NODE_ID 命令可將特定節點加入黑名單。下一賽季開始後自動取消。例：./gkc-cli addblackagent 123456e4733b68623fd358238316e5bcfc3faf34c68b993af1fc10d9c8123456 </p>
+	<p>所有節點可執行 listblackagents 命令查詢當前賽季的黑名單。</p>
+
 	<h2>v2.4.0</h2>
 	<h3>1 錢包升級為HD錢包</h3>
 	<p>本功能相容老版本錢包：如果資料目錄中存在舊版本的錢包檔（默認為wallet.dat），運行新版本程式時不會啟用HD錢包功能，老錢包可繼續使用。新版本錢包和舊版本錢包可相互轉帳，不受影響。</p>
